--- a/gmond/modules/conf.d/aixdisk.conf
+++ b/gmond/modules/conf.d/aixdisk.conf
@@ -1,1 +1,142 @@
-a
+
+modules {
+  module {
+    name = "aixdisk_module"
+    path = "modaixdisk.so"
+  }
+}
+
+collection_group {
+  collect_every = 15
+  time_threshold = 180
+/*
+  metric {
+    name = "hdisk0_size"
+    title = "hdisk0 total disk size"
+    value_threshold = 1.0
+  }
+  metric {
+    name = "hdisk0_free"
+    title = "hdisk0 free disk space"
+    value_threshold = 1.0
+  }
+  metric {
+    name = "hdisk0_bsize"
+    title = "hdisk0 block size"
+    value_threshold = 1.0
+  }
+  metric {
+    name = "hdisk0_xrate"
+    title = "hdisk0 transfer rate capability"
+    value_threshold = 0.1
+  }
+  metric {
+    name = "hdisk0_xfers"
+    title = "hdisk0 number of transfers to/from disk"
+    value_threshold = 0.1
+  }
+  metric {
+    name = "hdisk0_wbytes"
+    title = "hdisk0 number of bytes written to disk"
+    value_threshold = 0.1
+  }
+  metric {
+    name = "hdisk0_rbytes"
+    title = "hdisk0 number of bytes read from disk"
+    value_threshold = 0.1
+  }
+  metric {
+    name = "hdisk0_qdepth"
+    title = "hdisk0 instantaneous service queue depth"
+    value_threshold = 0.1
+  }
+  metric {
+    name = "hdisk0_time"
+    title = "hdisk0 percentage of time disk is active"
+    value_threshold = 0.1
+  }
+*/
+/*
+  metric {
+    name = "hdisk0_q_full"
+    title = "hdisk0 service queue full occurrence"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_rserv"
+    title = "hdisk0 read or receive service time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_rtimeout"
+    title = "hdisk0 number of read request timeouts"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_rfailed"
+    title = "hdisk0 number of failed read requests"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_min_rserv"
+    title = "hdisk0 minimum read or receive service time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_max_rserv"
+    title = "hdisk0 maximum read or receive service time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wserv"
+    title = "hdisk0 write or send service time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wtimeout"
+    title = "hdisk0 number of write request timeouts"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wfailed"
+    title = "hdisk0 number of failed write requests"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_min_wserv"
+    title = "hdisk0 minimum write or send service time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_max_wserv"
+    title = "hdisk0 maximum write or send service time"
+    value_threshold = 0.1
+  }
+  metric {
+    name = "hdisk0_wq_depth"
+    title = "hdisk0 instantaneous wait queue depth"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wq_sampled"
+    title = "hdisk0 accumulated sampled dk_wq_depth"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wq_time"
+    title = "hdisk0 accumulated wait queueing time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wq_min_time"
+    title = "hdisk0 minimum wait queueing time"
+    value_threshold = 0.001
+  }
+  metric {
+    name = "hdisk0_wq_max_time"
+    title = "hdisk0 maximum wait queueing time"
+    value_threshold = 0.001
+  }
+*/
+}
+
